# yash-rs

./: .coderabbit.yaml  .editorconfig  .gitignore  .markdownlint.json  AGENTS.md  Cargo.toml  PLAN.md  README.md  SIGNAL_TRAIT_ANALYSIS.md  TODO.md  check-docs.sh  check-extra.sh  check-msrv.sh  check-release-build.sh  check-release-readiness.sh  check-release.sh  check-semver.sh  check.sh  do-release.sh  workspace.code-workspace
yash/: Cargo.toml
yash-arith/: CHANGELOG.md  Cargo.toml  README.md
yash-arith/src/: ast.rs  env.rs  eval.rs  lib.rs  token.rs
yash-arith/src/ast/: portability.rs
yash-builtin/: CHANGELOG.md  Cargo.toml  README.md
yash-builtin/src/: alias.rs  bg.rs  break.rs  cd.rs  colon.rs  command.rs  common.rs  continue.rs  eval.rs  exec.rs  exit.rs  export.rs  false.rs  fg.rs  getopts.rs  jobs.rs  kill.rs  lib.rs  pwd.rs  read.rs  readonly.rs  return.rs  set.rs  shift.rs  source.rs  times.rs  trap.rs  true.rs  type.rs  typeset.rs  ulimit.rs  umask.rs  unalias.rs  unset.rs  wait.rs
yash-builtin/src/alias/: semantics.rs
yash-builtin/src/break/: semantics.rs  syntax.rs
yash-builtin/src/cd/: assign.rs  canonicalize.rs  cdpath.rs  chdir.rs  print.rs  shorten.rs  syntax.rs  target.rs
yash-builtin/src/command/: identify.rs  invoke.rs  search.rs  syntax.rs
yash-builtin/src/common/: arg.rs  report.rs  syntax.rs
yash-builtin/src/continue/: semantics.rs
yash-builtin/src/getopts/: model.rs  report.rs  verify.rs
yash-builtin/src/kill/: print.rs  send.rs  signal.rs  syntax.rs
yash-builtin/src/pwd/: semantics.rs  syntax.rs
yash-builtin/src/read/: assigning.rs  input.rs  syntax.rs
yash-builtin/src/set/: arg.rs  syntax.rs
yash-builtin/src/source/: semantics.rs  syntax.rs
yash-builtin/src/times/: format.rs  syntax.rs
yash-builtin/src/trap/: cond.rs  syntax.rs
yash-builtin/src/typeset/: print_functions.rs  print_variables.rs  set_functions.rs  set_variables.rs  syntax.rs
yash-builtin/src/ulimit/: resource.rs  set.rs  show.rs  syntax.rs
yash-builtin/src/umask/: eval.rs  format.rs  symbol.rs  syntax.rs
yash-builtin/src/unalias/: semantics.rs  syntax.rs
yash-builtin/src/unset/: semantics.rs  syntax.rs
yash-builtin/src/wait/: core.rs  old.rs  search.rs  status.rs  syntax.rs
yash-cli/: CHANGELOG-bin.md  CHANGELOG-lib.md  CHANGELOG.md  Cargo.toml  README.md
yash-cli/src/: lib.rs  main.rs  startup.rs
yash-cli/src/startup/: args.rs  init_file.rs  input.rs
yash-cli/tests/: scripted_test.rs
yash-cli/tests/pty/: mod.rs
yash-cli/tests/scripted_test/: alias-p.sh  alias-y.sh  andor-p.sh  arith-p.sh  arith-y.sh  async-p.sh  bg-p.sh  bracket-y.sh  break-p.sh  builtins-p.sh  case-p.sh  case-y.sh  cd-p.sh  cd-y.sh  cmdsub-p.sh  command-p.sh  command-y.sh  comment-p.sh  continue-p.sh  declutil-p.sh  declutil-y.sh  errexit-p.sh  error-p.sh  error-y.sh  eval-p.sh  exec-p.sh  exit-p.sh  export-p.sh  export-y.sh  false-p.sh  fg-p.sh  fnmatch-p.sh  for-p.sh  for-y.sh  fsplit-p.sh  function-p.sh  function-y.sh  getopts-p.sh  getopts-y.sh  grouping-p.sh  (+44 more)
yash-env/: CHANGELOG.md  Cargo.toml  README.md
yash-env-test-helper/: CHANGELOG.md  Cargo.toml  README.md
yash-env-test-helper/src/: function.rs  lib.rs
yash-env/src/: alias.rs  any.rs  async_system.rs  builtin.rs  decl_util.rs  env.rs  exec.rs  executor_helper.rs  expansion.rs  fork.rs  function.rs  input.rs  io.rs  job.rs  lib.rs  option.rs  parser.rs  prompt.rs  pwd.rs  real_system.rs  semantics.rs  signal.rs  source.rs  stack.rs  subshell.rs  system.rs  test_helper.rs  trap.rs  variable.rs  virtual_system.rs  waker.rs
yash-env/src/builtin/: getopts.rs
yash-env/src/expansion/: attr.rs  attr_strip.rs  split.rs
yash-env/src/input/: echo.rs  eof_guard.rs  fd_reader.rs  fd_reader_2.rs  ignore_eof.rs  memory.rs  reporter.rs
yash-env/src/job/: fmt.rs  id.rs  tcsetpgrp.rs
yash-env/src/semantics/: command.rs  expansion.rs
yash-env/src/source/: pretty.rs
yash-env/src/subshell/: config.rs
yash-env/src/system/: c_string.rs  concurrency.rs  errno.md  errno.rs  error.rs  fd_flag.rs  fd_set.rs  file_system.rs  future.rs  id.rs  io.rs  open_flag.rs  process.rs  real.rs  resource.rs  select.rs  shared.rs  signal.rs  stat.rs  sysconf.rs  terminal.rs  time.rs  unusable.rs  user.rs  virtual.rs
yash-env/src/test_helper/: function.rs  wake_flag.rs
yash-env/src/trap/: cond.rs  state.rs
yash-env/src/variable/: constants.rs  guard.rs  main.rs  quirk.rs  value.rs
yash-env/src/virtual/: file_system.rs  process.rs
yash-env/src/virtual_system/: file_system.rs  io.rs  process.rs
yash-env/src/waker/: queue.rs  set.rs
yash-executor/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
yash-executor/src/: executor.rs  forwarder.rs  lib.rs  spawner.rs  task.rs  waker.rs
yash-executor/tests/: executor.rs  forwarder.rs  spawner.rs
yash-fnmatch/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
yash-fnmatch/src/: ast.rs  char_iter.rs  lib.rs
yash-fnmatch/src/ast/: parse.rs  regex.rs
yash-prompt/: CHANGELOG.md  Cargo.toml  README.md
yash-prompt/src/: expand_posix.rs  lib.rs  prompter.rs
yash-quote/: CHANGELOG.md  Cargo.toml  README.md
yash-quote/src/: lib.rs
yash-semantics/: CHANGELOG.md  Cargo.toml  README.md
yash-semantics/src/: assign.rs  command.rs  command_impl.rs  command_search.rs  compound.rs  expansion.rs  function_definition.rs  handle.rs  handle_impl.rs  job.rs  lib.rs  pipeline.rs  redir.rs  runner.rs  runner_legacy.rs  runtime.rs  simple_command.rs  tests.rs  trap.rs  xtrace.rs
yash-semantics/src/command/: and_or.rs  and_or_list.rs  compound_command.rs  function_definition.rs  item.rs  pipeline.rs  simple_command.rs
yash-semantics/src/command_impl/: and_or_list.rs  compound_command.rs  function_definition.rs  item.rs  pipeline.rs  simple_command.rs
yash-semantics/src/expansion/: attr.rs  glob.rs  (+9 more)
yash-syntax/: CHANGELOG.md  Cargo.toml  README.md
yash-syntax/src/: alias.rs  builtin.rs  decl_util.rs  exec.rs  expansion.rs  input.rs  lib.rs  parser.rs  source.rs  syntax.rs
yash/src/: lib.rs  main.rs  startup.rs
yash/tests/: integration_test.rs  scripted_test.rs
(+287 files in other folders)
