[workspace]
members = ["yash-*"]
resolver = "2"

[workspace.dependencies]
annotate-snippets = "0.11.4"
assert_matches = "1.5.0"
bitflags = "2.6.0"
dyn-clone = "1.0.19"
either = "1.9.0"
enumset = "1.1.2"
errno = { version = "0.3.10", default-features = false }
futures-executor = "0.3.31"
futures-util = "0.3.31"
fuzed-iterator = "1.0.0"
itertools = "0.14.0"
libc = { version = "0.2.169", default-features = false }
nix = "0.29.0"
regex = "1.9.4"
regex-syntax = "0.8.2"
slab = "0.4.9"
strum = "0.27.0"
tempfile = "3.8.0"
thiserror = "2.0.4"
unix_path = "1.0.1"
unix_str = "1.0.0"
yash-arith = { path = "yash-arith", version = "0.2.1" }
yash-builtin = { path = "yash-builtin", version = "0.7.1" }
yash-env = { path = "yash-env", version = "0.7.1" }
yash-env-test-helper = { path = "yash-env-test-helper", version = "0.5.0" }
yash-executor = { path = "yash-executor", version = "1.0.0" }
yash-fnmatch = { path = "yash-fnmatch", version = "1.1.1" }
yash-prompt = { path = "yash-prompt", version = "0.5.0" }
yash-quote = { path = "yash-quote", version = "1.1.1" }
yash-semantics = { path = "yash-semantics", version = "0.7.1" }
yash-syntax = { path = "yash-syntax", version = "0.14.1" }
