[package]
name = "yash-arith"
version = "0.2.2"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.85.0"
description = "POSIX shell arithmetic expansion"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
