[package]
name = "yash-builtin"
version = "0.6.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.82.0"
description = "Implementation of the built-in utilities of yash"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[features]
default = ["yash-prompt", "yash-semantics"]
# yash-prompt is used in the read built-in, which requires yash-semantics.
yash-prompt = ["dep:yash-prompt", "yash-semantics"]
yash-semantics = ["dep:yash-semantics", "dep:enumset"]

[dependencies]
either = "1.9.0"
enumset = { version = "1.1.2", optional = true }
itertools = "0.13.0"
thiserror = "2.0.4"
yash-env = { workspace = true }
yash-prompt = { workspace = true, optional = true }
yash-quote = { workspace = true }
yash-semantics = { workspace = true, optional = true }
yash-syntax = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
futures-executor = "0.3.31"
futures-util = { version = "0.3.31", features = ["channel"] }
yash-env-test-helper = { workspace = true }
yash-semantics = { workspace = true }
