[package]
name = "yash-builtin"
version = "0.10.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.86.0"
description = "Implementation of the built-in utilities of yash"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[features]
default = ["yash-prompt", "yash-semantics"]
# yash-prompt is used in the read built-in, which requires yash-semantics.
yash-prompt = ["dep:yash-prompt", "yash-semantics"]
yash-semantics = ["dep:yash-semantics", "dep:enumset"]

[dependencies]
either = { workspace = true }
enumset = { workspace = true, optional = true }
itertools = { workspace = true }
thiserror = { workspace = true }
yash-env = { workspace = true }
yash-prompt = { workspace = true, optional = true }
yash-quote = { workspace = true }
yash-semantics = { workspace = true, optional = true }
yash-syntax = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures-executor = { workspace = true }
futures-util = { workspace = true, features = ["channel"] }
yash-env-test-helper = { workspace = true }
yash-semantics = { workspace = true }

[lints]
workspace = true
