[package]
name = "yash-builtin"
version = "0.14.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.86.0"
description = "Implementation of the built-in utilities of yash"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[package.metadata.docs.rs]
all-features = true

[features]
default = []
yash-semantics = ["dep:yash-semantics"]

[dependencies]
either = { workspace = true }
enumset = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
yash-env = { workspace = true }
yash-quote = { workspace = true }
yash-semantics = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures-executor = { workspace = true }
futures-util = { workspace = true, features = ["channel"] }
yash-env-test-helper = { path = "../yash-env-test-helper" }
yash-semantics = { path = "../yash-semantics" }
yash-syntax = { path = "../yash-syntax" }

[lints]
workspace = true
