[package]
name = "yash-cli"
version = "3.0.1"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.86.0"
description = "Extended POSIX shell"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/yash-cli-{ version }/{ name }-{ target }{ archive-suffix }"

[[bin]]
name = "yash3"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
yash-builtin = { workspace = true }
yash-env = { workspace = true }
yash-executor = { workspace = true }
yash-prompt = { workspace = true }
yash-semantics = { workspace = true }
yash-syntax = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures-util = { workspace = true, features = ["channel"] }
fuzed-iterator = { workspace = true }
nix = { workspace = true, features = ["fs", "process", "term"] }
tempfile = { workspace = true }

[lints]
workspace = true
