[package]
name = "yash-env-test-helper"
version = "0.2.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.82.0"
description = "Test helper for yash-env crate"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]

[dependencies]
assert_matches = "1.5.0"
futures-executor = "0.3.31"
futures-util = { version = "0.3.31", features = ["channel"] }
yash-env = { path = "../yash-env", version = "0.4.0" }
