[package]
name = "yash-env-test-helper"
version = "0.5.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.86.0"
description = "Test helper for yash-env crate"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
assert_matches = { workspace = true }
futures-executor = { workspace = true }
futures-util = { workspace = true, features = ["channel"] }
yash-env = { workspace = true }
