[package]
name = "yash-env-test-helper"
version = "0.11.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.87.0"
description = "Test helper for yash-env crate"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
yash-env = { workspace = true, features = ["test-helper"] }

[lints]
workspace = true
