[package]
name = "yash-env"
version = "0.4.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.79.0"
description = "Yash shell execution environment interface"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]

[dependencies]
annotate-snippets = "0.11.4"
bitflags = "2.6.0"
either = "1.9.0"
enumset = "1.1.2"
futures-util = "0.3.31"
itertools = "0.13.0"
slab = "0.4.9"
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "1.0.47"
unix_path = "1.0.1"
unix_str = "1.0.0"
yash-quote = { path = "../yash-quote", version = "1.1.1" }
yash-syntax = { path = "../yash-syntax", version = "0.12.0", features = ["annotate-snippets"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs", "signal", "user"] }
yash-executor = { path = "../yash-executor", version = "1.0.0" }

[dev-dependencies]
assert_matches = "1.5.0"
futures-executor = "0.3.31"
futures-util = { version = "0.3.31", features = ["channel"] }
