[package]
name = "yash-env"
version = "0.6.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.82.0"
description = "Yash shell execution environment interface"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
annotate-snippets = "0.11.4"
bitflags = "2.6.0"
either = "1.9.0"
enumset = "1.1.2"
errno = { version = "0.3.10", default-features = false }
futures-util = "0.3.31"
itertools = "0.13.0"
slab = "0.4.9"
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "2.0.4"
unix_path = "1.0.1"
unix_str = "1.0.0"
yash-quote = { workspace = true }
yash-syntax = { workspace = true, features = ["annotate-snippets"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.169", default-features = false }
yash-executor = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
futures-executor = "0.3.31"
futures-util = { version = "0.3.31", features = ["channel"] }
