[package]
name = "yash-env"
version = "0.10.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.86.0"
description = "Yash shell execution environment interface"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
annotate-snippets = { workspace = true }
bitflags = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }
dyn-clone = { workspace = true }
either = { workspace = true }
enumset = { workspace = true }
errno = { workspace = true, default-features = false }
itertools = { workspace = true }
slab = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
unix_path = { workspace = true }
unix_str = { workspace = true }
yash-quote = { workspace = true }
yash-syntax = { workspace = true, features = ["annotate-snippets"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true, default-features = false }
yash-executor = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures-executor = { workspace = true }
futures-util = { workspace = true, features = ["channel"] }
yash-prompt = { path = "../yash-prompt" }
yash-semantics = { path = "../yash-semantics" }

[lints]
workspace = true
