[package]
name = "yash-executor"
version = "1.0.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.85.0"
description = "single-threaded concurrent task executor"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "MIT OR Apache-2.0"
keywords = ["concurrency", "executor", "single-threaded"]
categories = ["asynchronous", "concurrency", "no-std"]
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
