[package]
name = "yash-fnmatch"
version = "1.1.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.58.0"
description = "POSIX-compatible pattern matching for globbing"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "MIT OR Apache-2.0"
keywords = ["posix", "shell", "glob"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.8.1"
regex-syntax = "0.7.1"
thiserror = "1.0.38"

[dev-dependencies]
assert_matches = "1.5.0"
