[package]
name = "yash-fnmatch"
version = "1.1.2"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.85.0"
description = "POSIX-compatible pattern matching for globbing"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "MIT OR Apache-2.0"
keywords = ["posix", "shell", "glob"]
categories = ["command-line-utilities"]

[dependencies]
regex = { workspace = true }
regex-syntax = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

[lints]
workspace = true
