[package]
name = "yash-prompt"
version = "0.9.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.87.0"
description = "Command line prompt for yash shell"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
futures-util = { workspace = true }
yash-env = { workspace = true }
yash-syntax = { workspace = true }

[dev-dependencies]
yash-env-test-helper = { path = "../yash-env-test-helper" }
yash-semantics = { path = "../yash-semantics" }

[lints]
workspace = true
