[package]
name = "yash-quote"
version = "1.1.1"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.87.0"
description = "Utility for quoting strings used in POSIX shell scripts"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "MIT OR Apache-2.0"
keywords = ["posix", "shell"]
categories = ["command-line-interface"]
publish = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
