[package]
name = "yash-semantics"
version = "0.4.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.82.0"
description = "Yash shell language semantics"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]

[dependencies]
assert_matches = "1.5.0"
enumset = "1.1.2"
itertools = "0.13.0"
thiserror = "1.0.47"
yash-arith = { path = "../yash-arith", version = "0.2.1" }
yash-env = { path = "../yash-env", version = "0.4.0" }
yash-fnmatch = { path = "../yash-fnmatch", version = "1.1.1" }
yash-quote = { path = "../yash-quote", version = "1.1.1" }
yash-syntax = { path = "../yash-syntax", version = "0.12.0" }

[dev-dependencies]
futures-executor = "0.3.31"
futures-util = { version = "0.3.31", features = ["channel"] }
yash-env-test-helper = { path = "../yash-env-test-helper", version = "0.2.0" }
