[package]
name = "yash-semantics"
version = "0.6.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.82.0"
description = "Yash shell language semantics"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
assert_matches = "1.5.0"
enumset = "1.1.2"
itertools = "0.13.0"
thiserror = "2.0.4"
yash-arith = { workspace = true }
yash-env = { workspace = true }
yash-fnmatch = { workspace = true }
yash-quote = { workspace = true }
yash-syntax = { workspace = true }

[dev-dependencies]
futures-executor = "0.3.31"
futures-util = { version = "0.3.31", features = ["channel"] }
yash-env-test-helper = { workspace = true }
