[package]
name = "yash-semantics"
version = "0.12.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.86.0"
description = "Yash shell language semantics"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
either = { workspace = true }
enumset = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
yash-arith = { workspace = true }
yash-env = { workspace = true }
yash-fnmatch = { workspace = true }
yash-quote = { workspace = true }
yash-syntax = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures-executor = { workspace = true }
futures-util = { workspace = true, features = ["channel"] }
yash-env-test-helper = { path = "../yash-env-test-helper" }

[lints]
workspace = true
