[package]
name = "yash-syntax"
version = "0.15.2"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.85.0"
description = "POSIX-compatible shell script syntax parser"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
annotate-snippets = { workspace = true, optional = true }
futures-util = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
annotate-snippets = { workspace = true }
assert_matches = { workspace = true }
futures-executor = { workspace = true }

[lints]
workspace = true
