[package]
name = "yash-syntax"
version = "0.19.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2024"
rust-version = "1.87.0"
description = "POSIX-compatible shell script syntax parser"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
keywords = ["posix", "shell"]
categories = ["command-line-utilities", "parser-implementations"]
publish = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
futures-util = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
yash-env = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures-executor = { workspace = true }

[lints]
workspace = true
