[package]
name = "yash"
version = "0.1.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.67.0"
description = "Extended POSIX shell"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
# license-file = "LICENSE"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
annotate-snippets = { version = "0.9.1", features = ["color"] }
async-trait = "0.1.66"
futures-executor = "0.3.27"
futures-util = "0.3.27"
yash-arith = { path = "../yash-arith", version = "0.1.0" }
yash-builtin = { path = "../yash-builtin", version = "0.1.0" }
yash-env = { path = "../yash-env", version = "0.1.0" }
yash-fnmatch = { path = "../yash-fnmatch", version = "1.1.0" }
yash-quote = { path = "../yash-quote", version = "1.1.0" }
yash-semantics = { path = "../yash-semantics", version = "0.1.0" }
yash-syntax = { path = "../yash-syntax", version = "0.6.1" }
