[package]
name = "yash"
version = "0.1.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
rust-version = "1.70.0"
description = "Extended POSIX shell"
# documentation = "https://yash.osdn.jp/doc/"
readme = "README.md"
# homepage = "https://yash.osdn.jp/"
repository = "https://github.com/magicant/yash-rs"
license = "GPL-3.0-or-later"
# license-file = "LICENSE"
keywords = ["posix", "shell"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
futures-executor = "0.3.28"
futures-util = { version = "0.3.28", features = ["channel"] }
thiserror = "1.0.47"
yash-arith = { path = "../yash-arith", version = "0.2.1" }
yash-builtin = { path = "../yash-builtin", version = "0.1.0" }
yash-env = { path = "../yash-env", version = "0.1.0" }
yash-fnmatch = { path = "../yash-fnmatch", version = "1.1.0" }
yash-quote = { path = "../yash-quote", version = "1.1.1" }
yash-semantics = { path = "../yash-semantics", version = "0.1.0" }
yash-syntax = { path = "../yash-syntax", version = "0.7.0" }

[dev-dependencies]
assert_matches = "1.5.0"
fuzed-iterator = "1.0.0"
nix = { version = "0.27.0", features = ["fs", "process", "term"] }
tempfile = "3.8.0"
